--- a/style.css
+++ b/style.css
@@ -1,28 +1,38 @@
-:root {
-    --ecriture: #f3f3f3;
-    --background: #262626;
-    --background: linear-gradient(to right, #482581, #0075cc, #00bce7, #4cfce1);
+html {
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
 body {
+
     margin: 0;
     padding: 0;
-    background: var(--background);
     display: flex;
     align-items: center;
     flex-direction: column;
     font-family: sans-serif;
     text-align: center;
 
+}
 
 
+.bloc1 {
+
+    background: linear-gradient(#ffffff, #0050e6, #000000);
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
 }
 
 h1 {
+
     margin-top: 0px;
     font-size: 80px;
-    color: var(--ecriture);
-
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding-top: 70px;
 
     text-align: center;
     padding-top: 70px;
@@ -30,30 +40,26 @@ h1 {
 }
 
 h2 {
+
     margin-top: 30px;
-    color: var(--ecriture);
     text-align: center;
-
+    color: white;
 }
 
-.contenue {
-    padding-left: 20px;
-    padding-right: 20px;
-    color: var(--ecriture);
-    text-align: center;
-}
+
+
 
 .changeTheme {
+
     cursor: pointer;
     width: 200px;
     height: 70px;
-    color: var(--ecriture);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
 
-    background-color: rgba(255, 255, 255, 0.06);
+    background-color: rgba(255, 255, 255, 0.932);
     -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
     margin: auto;
@@ -66,15 +72,25 @@ h2 {
     box-shadow: 15px 15px 22px rgba(0, 0, 0, 0.2);
 }
 
-html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
+
+.contenue {
+
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    content: justify;
+    color: white;
+    padding: 50px 10%;
+    text-align: justify;
 }
 
 
 
 
-
 .navbar {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -83,6 +99,7 @@ html {
 }
 
 .navbar a {
+
     text-decoration: none;
     color: rgb(250, 250, 250);
     padding: 10px 20px;
@@ -91,15 +108,23 @@ html {
 }
 
 .navbar a:hover {
-    background-color: rgb(146, 242, 255);
+
+    background-color: #5892ff42;
 }
 
-h1 {
-    text-align: center;
-    padding-top: 70px;
+
+
+
+.container {
+
+    width: 250px;
+    border: 5px solid black;
 }
 
-contenue {
-    padding: 50px 10%;
-    text-align: justify;
+img {
+
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+
 }
